# berlitz

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  embed.sh
demo/: main.cpp  plat_impl.c
include/berlitz/: berlitz.h  core.h  texture.h
include/berlitz/3d/: camera.h  mesh.h
include/platinum/: core.h  platinum.h  texture.h
include/platinum/3d/: camera.h  mesh.h
src/: berlitz.c  berlitz_impl.h  platinum.c  platinum_impl.h  texture.c
src/3d/: 3d_impl.h  camera.c  mesh.c  pipeline.c  shader.h  shader.wgsl
